dodanie sekcji header

--- a/index.html
+++ b/index.html
@@ -22,5 +22,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <div class="header_container">
+            <div class="logo_container">
+                <h1>BestShop</h1>
+            </div>
+            <nav class="menu_container">
+                <div><a href="#">WHY US</a></div>
+                <div><a href="#">BENEFITS</a></div>
+                <div><a href="#">PRICES</a></div>
+                <div><a href="#">CONTACT</a></div>
+            </nav>
+        </div>
+    </header>
 
 </body>
