dodanie sekcji main

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="header_container">
             <div class="logo_container">
-                <h1>BestShop</h1>
+                <a href="#">BestShop</a>
             </div>
             <nav class="menu_container">
                 <div><a href="#">WHY US</a></div>
@@ -35,5 +35,10 @@
             </nav>
         </div>
     </header>
+    <main>
+        <h2 class="main_title">Sell More!</h2>
+        <p class="main_description">Open shop on our platform and increase your sales</p>
+        <a href="#" class="main_cta">Open your shop</a>
+    </main>
 
 </body>
