dodanie sekcji statistic

--- a/index.html
+++ b/index.html
@@ -28,17 +28,43 @@
                 <a href="#">BestShop</a>
             </div>
             <nav class="menu_container">
-                <div><a href="#">WHY US</a></div>
+                <div><a href="#why_us">WHY US</a></div>
                 <div><a href="#">BENEFITS</a></div>
                 <div><a href="#">PRICES</a></div>
                 <div><a href="#">CONTACT</a></div>
             </nav>
         </div>
     </header>
-    <main>
-        <h2 class="main_title">Sell More!</h2>
+    <main id="why_us">
+        <h1 class="main_title">Sell More!</h1>
         <p class="main_description">Open shop on our platform and increase your sales</p>
         <a href="#" class="main_cta">Open your shop</a>
     </main>
+    <section id="stats">
+        <h2 class="stats_title">The most popular sales platform in country</h2>
+        <div class="stats_container">
+            <div class="stats_card">
+                <div class="stats_circle">
+                    <img class="stats_img" src="assets/Person.svg" alt="person">
+                </div>
+                <span class="stats_number">100000+</span>
+                <p class="stat_description">daily entries</p>
+            </div>
+            <div class="stats_card">
+                <div class="stats_circle">
+                    <img class="stats_img" src="assets/Eye.svg" alt="person">
+                </div>
+                <span class="stats_number">2000000+</span>
+                <p class="stat_description">seen products every day</p>
+            </div>
+            <div class="stats_card">
+                <div class="stats_circle">
+                    <img class="stats_img" src="assets/Catalog.svg" alt="person">
+                </div>
+                <span class="stats_number">10000+</span>
+                <p class="stat_description">added posts daily</p>
+            </div>
+        </div>
+    </section>
 
 </body>
