dodanie sekcji benefits

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </div>
             <nav class="menu_container">
                 <div><a href="#why_us">WHY US</a></div>
-                <div><a href="#">BENEFITS</a></div>
-                <div><a href="#">PRICES</a></div>
-                <div><a href="#">CONTACT</a></div>
+                <div><a href="#benefits">BENEFITS</a></div>
+                <div><a href="#prices">PRICES</a></div>
+                <div><a href="#contact">CONTACT</a></div>
             </nav>
         </div>
     </header>
@@ -66,5 +66,42 @@
             </div>
         </div>
     </section>
+    <section id="benefits">
+        <div class="benefits_container">
+            <div class="benefits_container_block">
+                <div class="block1_left">
+                    <h3 class="benefits_title">Be always first</h3>
+                    <p class="benefits_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="benefits_line"></div>
+                </div>
+                <div class="block1_right">
+                    <img class="laptop" src="assets/Macbook.png" alt="laptop">
+                    <div class="red_box"></div>
+                </div>
+            </div>
+            <div class="benefits_container_block">
+                <div class="block2_left">
+                    <img class="iphone" src="assets/iPhone.png">
+                    <div class="blue_circle"></div>
+                </div>
+                <div class="block2_right">
+                    <h3 class="benefits_title">Your shop is where you are!</h3>
+                    <p class="benefits_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="benefits_line"></div>
+                </div>
+            </div>
+            <div class="benefits_container_block">
+                <div class="block3_left">
+                    <h3 class="benefits_title">Increase recognition your brand!</h3>
+                    <p class="benefits_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <div class="benefits_line"></div>
+                </div>
+                <div class="block3_right">
+                    <img class="trumpet" src="assets/Trumpet.png" alt="trumpet">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="prices"></section>
 
 </body>
