--- a/index.html
+++ b/index.html
@@ -102,6 +102,44 @@
             </div>
         </div>
     </section>
-    <section id="prices"></section>
+    <section id="prices">
+        <h2 class="prices_title">Pricing</h2>
+        <div class="prices_container">
+            <div class="prices_container_card">
+                <strong class="package">Basic</strong>
+                <span class="price">$0</span>
+                <p class="limited_offer"></p>
+                <p class="hdd">100 MB HDD</p>
+                <p class="subdomain">1 Subdomain</p>
+                <p class="emails">2 E-mails</p>
+                <p class="license">Two years license</p>
+                <p class="support">Full support</p>
+                <a href="#" class="begin_button">Begin</a>
+            </div>
+            <div class="prices_container_card">
+                <strong class="package">Professional</strong>
+                <span class="price">$25</span>
+                <p class="limited_offer">Limited offer</p>
+                <p class="hdd">500 MB HDD</p>
+                <p class="subdomain">2 Subdomain</p>
+                <p class="emails">5 E-mails</p>
+                <p class="license">One years license</p>
+                <p class="support">Full support</p>
+                <a href="#" class="begin_button">Begin</a>
+            </div>
+            <div class="prices_container_card">
+                <strong class="package">Basic</strong>
+                <span class="price">$60</span>
+                <p class="limited_offer">Limited offer</p>
+                <p class="hdd">2 GB HDD</p>
+                <p class="subdomain">5 Subdomain</p>
+                <p class="emails">20 E-mails</p>
+                <p class="license">Two years license</p>
+                <p class="support">Full support</p>
+                <a href="#" class="begin_button">Begin</a>
+            </div>
+
+        </div>
+    </section>
 
 </body>
