dodanie kontenera contact-info w sekcji contact

--- a/index.html
+++ b/index.html
@@ -138,8 +138,24 @@
                 <p class="support">Full support</p>
                 <a href="#" class="begin_button">Begin</a>
             </div>
-
         </div>
+    </section>
+    <section id="contact">
+        <div class="contact_info">
+            <h2 class="contact_info_title">Any questions?</h2>
+            <p class="contact_info_description">Leave your email address or call us!</p>
+            <div class="contact_info_details">
+                <span class="mail_container">
+                    <img class="mail_icon"src="assets/Mail%20Icon.svg" alt="mail icon">
+                    <a class="mail_adr" href="mailto:info@bestshop.xyz">info@bestshop.xyz</a>
+                </span>
+                <span class="phone_container">
+                    <img class="phone_icon" src="assets/Phone%20Icon.svg" alt="phone icon">
+                    <a class="phone_number" href="tel:123456789">123 456 789</a>
+                </span>
+            </div>
+        </div>
+        <form class="contact_form"></form>
     </section>
 
 </body>
