dodanie sekcji contact

--- a/index.html
+++ b/index.html
@@ -155,7 +155,18 @@
                 </span>
             </div>
         </div>
-        <form class="contact_form"></form>
+        <form class="contact_form">
+            <label class="form_label">NAME</label>
+            <input class="form_field" type="text">
+            <label class="form_label">EMAIL</label>
+            <input class="form_field" type="email">
+            <label class="form_consent" for="checkbox-id">
+                <input type="checkbox" id="checkbox-id">
+                <span></span>
+                <p class="consent_text">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
+            </label>
+            <a class="send_button" href="#">Send</a>
+        </form>
     </section>
 
 </body>
