--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <meta property="og:description" content="">
     <meta property="og:image" content="">
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
