stworzenie responsywsnej sekcji header z hamburger menu

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <div class="logo_container">
                 <a href="#">BestShop</a>
             </div>
+            <input type="checkbox" id="hamburger" class="hamburger_checkbox">
+            <label for="hamburger" class="hamburger_menu">
+                <span class="hamburger_line"></span>
+                <span class="hamburger_line"></span>
+                <span class="hamburger_line"></span>
+            </label>
             <nav class="menu_container">
                 <div><a href="#why_us">WHY US</a></div>
                 <div><a href="#benefits">BENEFITS</a></div>
@@ -160,7 +166,7 @@
             <label class="form_label">EMAIL</label>
             <input class="form_field" type="email">
             <label class="form_consent" for="checkbox-id">
-                <input type="checkbox" id="checkbox-id">
+                <input class="custom_checkbox" type="checkbox" id="checkbox-id">
                 <span></span>
                 <p class="consent_text">I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the European Parliament’s and Council of the European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (Data Protection Directive)</p>
             </label>
