dodanie responsywnosci sekcji prices

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="benefits_container_block">
                 <div class="block2_left">
-                    <img class="iphone" src="assets/iPhone.png">
+                    <img class="iphone" alt="iphone" src="assets/iPhone.png">
                     <div class="blue_circle"></div>
                 </div>
                 <div class="block2_right">
@@ -111,36 +111,48 @@
         <h2 class="prices_title">Pricing</h2>
         <div class="prices_container">
             <div class="prices_container_card">
-                <strong class="package">Basic</strong>
-                <span class="price">$0</span>
-                <p class="limited_offer"></p>
-                <p class="hdd">100 MB HDD</p>
-                <p class="subdomain">1 Subdomain</p>
-                <p class="emails">2 E-mails</p>
-                <p class="license">Two years license</p>
-                <p class="support">Full support</p>
+                <div class="prices_container_card_left_side-mobile">
+                    <strong class="package">Basic</strong>
+                    <span class="price">$0</span>
+                    <p class="limited_offer"></p>
+                </div>
+                <div class="prices_container_card_right_side-mobile">
+                    <p class="hdd">100 MB HDD</p>
+                    <p class="subdomain">1 Subdomain</p>
+                    <p class="emails">2 E-mails</p>
+                    <p class="license">Two years license</p>
+                    <p class="support">Full support</p>
+                </div>
                 <a href="#" class="begin_button">Begin</a>
             </div>
             <div class="prices_container_card">
-                <strong class="package">Professional</strong>
-                <span class="price">$25</span>
-                <p class="limited_offer">Limited offer</p>
-                <p class="hdd">500 MB HDD</p>
-                <p class="subdomain">2 Subdomain</p>
-                <p class="emails">5 E-mails</p>
-                <p class="license">One years license</p>
-                <p class="support">Full support</p>
+                <div class="prices_container_card_left_side-mobile">
+                    <strong class="package">Professional</strong>
+                    <span class="price">$25</span>
+                    <p class="limited_offer">Limited offer</p>
+                </div>
+                <div class="prices_container_card_right_side-mobile">
+                    <p class="hdd">500 MB HDD</p>
+                    <p class="subdomain">2 Subdomain</p>
+                    <p class="emails">5 E-mails</p>
+                    <p class="license">One years license</p>
+                    <p class="support">Full support</p>
+                </div>
                 <a href="#" class="begin_button">Begin</a>
             </div>
             <div class="prices_container_card">
-                <strong class="package">Basic</strong>
-                <span class="price">$60</span>
-                <p class="limited_offer">Limited offer</p>
-                <p class="hdd">2 GB HDD</p>
-                <p class="subdomain">5 Subdomain</p>
-                <p class="emails">20 E-mails</p>
-                <p class="license">Two years license</p>
-                <p class="support">Full support</p>
+                <div class="prices_container_card_left_side-mobile">
+                    <strong class="package">Basic</strong>
+                    <span class="price">$60</span>
+                    <p class="limited_offer">Limited offer</p>
+                </div>
+                <div class="prices_container_card_right_side-mobile">
+                    <p class="hdd">2 GB HDD</p>
+                    <p class="subdomain">5 Subdomain</p>
+                    <p class="emails">20 E-mails</p>
+                    <p class="license">Two years license</p>
+                    <p class="support">Full support</p>
+                </div>
                 <a href="#" class="begin_button">Begin</a>
             </div>
         </div>
@@ -151,7 +163,7 @@
             <p class="contact_info_description">Leave your email address or call us!</p>
             <div class="contact_info_details">
                 <span class="mail_container">
-                    <img class="mail_icon"src="assets/Mail%20Icon.svg" alt="mail icon">
+                    <img class="mail_icon" src="assets/Mail%20Icon.svg" alt="mail icon">
                     <a class="mail_adr" href="mailto:info@bestshop.xyz">info@bestshop.xyz</a>
                 </span>
                 <span class="phone_container">
@@ -161,10 +173,10 @@
             </div>
         </div>
         <form class="contact_form">
-            <label class="form_label">NAME</label>
-            <input class="form_field" type="text">
-            <label class="form_label">EMAIL</label>
-            <input class="form_field" type="email">
+            <label for="name" class="form_label">NAME</label>
+            <input id="name" class="form_field" type="text">
+            <label for= "email" class="form_label">EMAIL</label>
+            <input id="email" class="form_field" type="email">
             <label class="form_consent" for="checkbox-id">
                 <input class="custom_checkbox" type="checkbox" id="checkbox-id">
                 <span></span>
