naprawienie problemów ze stylami w nowej sekcji calculator

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
                     </ul>
                 </div>
                 <label class="form__checkbox">
-                    <input type="checkbox" id="accounting"/>
+                    <input type="checkbox" class="custom_checkbox" id="accounting"/>
                     <span class="checkbox"></span>
                     <p class="consent__text">Accounting</p>
                 </label>
                 <label class="form__checkbox">
-                    <input type="checkbox" id="terminal"/>
+                    <input type="checkbox" class="custom_checkbox" id="terminal"/>
                     <span class="checkbox"></span>
                     <p class="consent__text">Rental of a payment terminal</p>
                 </label>
