poprawka kolorów i tytułu dla ostatniego pakietu

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
             <div class="prices_container_card">
                 <div class="prices_container_card_left_side-mobile">
-                    <strong class="package">Basic</strong>
+                    <strong class="package">Premium</strong>
                     <span class="price">$60</span>
                     <p class="limited_offer">Limited offer</p>
                 </div>
