--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                     <span>Total</span>
                     <span class="total__price">$700</span>
                 </div>
+                <p id="sum"></p>
             </div>
         </div>
     </section>
